--- a/prog web/individuais/ollama/static/index.html
+++ b/prog web/individuais/ollama/static/index.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Country Info - Estruturado</title>
+  <title>Ollama Chat</title>
+  <meta charset="UTF-8" />
 </head>
 <body>
-    <h1>Ask about a Country (Structured)</h1>
-    
-    <input type="text" id="question" placeholder="Type your question...">
-    <button onclick="askCountry()">Send</button>
+  <h1>Ollama</h1>
 
-    <div id="response"></div>
+  <h2>Sobre Países</h2>
+  <input type="text" id="country-input" placeholder="Pergunte sobre um país" />
+  <button onclick="askCountry()">Enviar</button>
+  <pre id="country-response"></pre>
 
-    <script>
-        function askCountry() {
-            const message = document.getElementById("question").value;
+  <h2>Sobre Cientistas</h2>
+  <input type="text" id="scientist-input" placeholder="Pergunte sobre um cientista" />
+  <button onclick="askScientist()">Enviar</button>
+  <pre id="scientist-response"></pre>
 
-            fetch('/ask_alt', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ message })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.error) {
-                    document.getElementById("response").innerHTML = `<p style="color:red;">${data.error}</p>`;
-                } else {
-                    const template = `
-                        <h2>Structured Response:</h2>
-                        <p><strong>Country:</strong> ${data.country_name}</p>
-                        <p><strong>Main City:</strong> ${data.main_city}</p>
-                        <p><strong>Languages:</strong> ${data.spoken_languages.join(", ")}</p>
-                    `;
-                    document.getElementById("response").innerHTML = template;
-                }
-            })
-            .catch(err => {
-                document.getElementById("response").innerHTML = `<p style="color:red;">Error: ${err}</p>`;
-            });
-        }
-    </script>
+  <script>
+    function askCountry() {
+      const message = document.getElementById("country-input").value;
+      fetch("/ask", {
+        method: "POST",
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({message})
+      })
+      .then(r => r.json())
+      .then(data => {
+        const template = `Nome: ${data.name}
+Capital: ${data.capital}
+Idiomas: ${data.languages.join(", ")}`;
+        document.getElementById("country-response").textContent = template;
+      });
+    }
+
+    function askScientist() {
+      const message = document.getElementById("scientist-input").value;
+      fetch("/ask_scientist", {
+        method: "POST",
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({message})
+      })
+      .then(r => r.json())
+      .then(data => {
+        const template = `Nome: ${data.name}
+Área: ${data.field}
+Trabalho Notável: ${data.notable_work}`;
+        document.getElementById("scientist-response").textContent = template;
+      });
+    }
+  </script>
 </body>
 </html>
